--- a/slides.css
+++ b/slides.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   background-color: #eee;
   font-family: sans-serif;
+  color: #000;
 }
 
 #sidebar, #main-content {
@@ -18,36 +19,75 @@ body {
  **/
 #sidebar {
   z-index: 3;
+  display: inherit;
   position: absolute;
   top: 0;
   left: 0;
   width: 15%;
-  background-color: #ccc;
-  border-right: 1px solid black;
+  background-color: #333;
+  border-right: 1px solid #000;
+  overflow-y: scroll;
+  overflow-x: none;
 }
 #sidebar.open {
   width: 15%;
 }
 #sidebar.closed {
-  width: 1.5em;
+  display: none;
   background-color: unset;
   border: none;
 }
 
+.slide-sidebar-item {
+  position: relative;
+  margin: .5em;
+  padding: 0.25em 0;
+  background-color: #666;
+  border: 1px solid #eee;
+  cursor: pointer;
+}
+.slide-sidebar-item:hover {
+  background-color: #bbb;
+}
+.slide-sidebar-item.active-slide {
+  background-color: #eee;
+}
+.sidebar-image {
+  width: 90%;
+  height: 5em;
+  margin: 0.25em auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.sidebar-count {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  font-size: .75em;
+  padding: 0.25em;
+}
+
 /* button to show/hide sidebar */
 #sidebar-toggle {
+  z-index: 10;
   position: absolute;
-  right: 0;
+  left: 0;
+  font-size: 2em;
   width: 1em;
   padding: 0.25em;
   background-color: #aaa;
   text-align: center;
   cursor: pointer;
 }
-#sidebar.open>#sidebar-toggle::before {
+#sidebar-toggle:hover {
+  color: #fff;
+}
+#sidebar.open+#main-content>#sidebar-toggle::before {
   content: 'X';
 }
-#sidebar.closed>#sidebar-toggle::before {
+#sidebar.closed+#main-content>#sidebar-toggle::before {
   content: '>';
 }
 
@@ -83,7 +123,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  opacity: 0;
+  opacity: 0.1;
   cursor: pointer;
 }
 .slide-nav-arrow:hover {
@@ -124,5 +164,23 @@ body {
     font-size: 1.5em;
     text-align: center;
     background-color: rgba(0,0,0,0.8);
-    color: white;
+    color: #fff;
+}
+
+@media only screen and (max-aspect-ratio: 1/1) {
+  /* resize main area based on sidebar visibility */
+  #sidebar.open+#main-content {
+    margin-left: 50%;
+    width: 50%;
+  }
+  #sidebar.closed+#main-content {
+    width: 100%;
+  }
+  
+  #sidebar {
+    width: 15%;
+  }
+  #sidebar.open {
+    width: 50%;
+  }
 }
