--- a/slides.css
+++ b/slides.css
@@ -8,6 +8,7 @@ body {
   background-color: #eee;
   font-family: sans-serif;
   color: #000;
+  overflow: hidden;
 }
 
 #sidebar, #main-content {
@@ -27,7 +28,7 @@ body {
   background-color: #333;
   border-right: 1px solid #000;
   overflow-y: scroll;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 #sidebar.open {
   width: 15%;
